2019-1/220/users/4386/executions/1572_996.log
== TEST (2019-03-14 20:18:39) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ *")
print(" ")
print(" ")
-- OUTPUT:
*****
(* o o *)
* ^ *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 20:18:58) 
-- CODE:
print("*****")
print("(* o o *)")
print("  * ^ *")
print(" ")
print(" ")
-- OUTPUT:
*****
(* o o *)
  * ^ *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 20:19:13) 
-- CODE:
print("*****")
print("(* o o *)")
print("  * ^ *")
print(" ")
print(" ")
-- OUTPUT:
*****
(* o o *)
  * ^ *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 20:21:52) 
-- CODE:
print("  *****")
print("(* o o *)")
print("  * ^ *")
print(" * --- *")
print("***** ")
-- OUTPUT:
*****
(* o o *)
  * ^ *
 * --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 20:26:04) 
-- CODE:
print("*****")
print("(* o o *)")
print()
print(" * )
print(" ")
-- ERROR:
File "XXXX", line 4
    print(" * )
              ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 20:26:29) 
-- CODE:
print("*****")
print("(* o o *)")
print()
print(" * ")
print(" ")
-- OUTPUT:
*****
(* o o *)

 *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 20:29:42) 
-- CODE:
print("*****")
print("(* o o *)")
print(" *  ^  *)
print(" * ")
print(" ")
-- ERROR:
File "XXXX", line 3
    print(" *  ^  *)
                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 20:30:30) 
-- CODE:
print("*****")
print("(* o o *)")
print(" *  ^  *")
print(" * ")
print(" ")
-- OUTPUT:
*****
(* o o *)
 *  ^  *
 *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 20:31:11) 
-- CODE:
print("*****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- * ")
print(" ")
-- OUTPUT:
*****
(* o o *)
 *  ^  *
 * --- *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 20:31:48) 
-- CODE:
print("*****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- * ")
print("  *****")
-- OUTPUT:
*****
(* o o *)
 *  ^  *
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 20:32:50) 
-- CODE:
print("*****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- * ")
print("  *****")
-- OUTPUT:
*****
(* o o *)
 *  ^  *
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 20:32:51) 
-- CODE:
print("*****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- * ")
print("  *****")
-- EXECUTION TIME:
0.154245
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 * --- * 
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
